--- a/src/assets/Components/List/ItemList/ItemList.module.css
+++ b/src/assets/Components/List/ItemList/ItemList.module.css
@@ -1,23 +1,35 @@
 .body {
+    cursor: pointer;
     width: 90%;
     position: relative;
     height: 10%;
     background: #d0d0d0;
     border-radius: 20px;
     margin: 10px auto;
-    display: grid;
-    grid-template-columns: 30% 70%;
+    /*display: grid;*/
+    /*grid-template-columns: 30% 70%;*/
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .body img {
-    width: 100%;
+    width: 100px;
     height: calc(70vh * 0.1);
     object-fit: contain;
-    margin: auto;
+    margin-right: 10px;
 }
 
 @media (max-width: 600px) {
     .body img {
         margin: 0 auto;
+        width: 50px;
+        height: 50px;
+        margin-left: 10px;
+    }
+
+    .body h4 {
+        width: 100%;
+        margin-left: 10px;
     }
 }
