--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,6 +3,22 @@
     -moz-user-select: none;
     -ms-user-select: none;
 }
+.app::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3) !important;
+    border-radius: 10px !important;
+    background-color: #F5F5F5 !important;
+}
+.app::-webkit-scrollbar
+{
+    width: 12px !important;
+    background-color: #F5F5F5 !important;
+}
+.app::-webkit-scrollbar-thumb
+{
+    border-radius: 10px !important;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3) !important;
+    background-color: #555 !important;
+}
 
 .app img {
     pointer-events: none;
